--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,11 +10,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout the code
+      # Checkout code
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Set up Python environment
+      # Set up Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -26,21 +26,20 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # Run tests (optional but recommended)
-      - name: Run tests
-        run: |
-          echo "Running tests..."
-          # pytest || echo "No tests found"
-
-      # Zip the app for deployment
+      # Zip the app
       - name: Zip the app
-        run: |
-          zip -r app.zip .
+        run: zip -r app.zip .
 
-      # Deploy to Azure Web App
+      # ✅ Login to Azure
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      # ✅ Deploy to Azure Web App
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
-          app-name: github-deployment   # Replace with your Azure Web App name
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          app-name: github-deployment   # Replace with your app name
+          slot-name: production
           package: app.zip
