--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,23 +10,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout the code
+      # ✅ Checkout the code
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Set up Python environment
+      # ✅ Set up Python environment
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
-      # Install dependencies
+      # ✅ Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # Zip the app for deployment
+      # ✅ Zip the app for deployment
       - name: Zip the app
         run: zip -r app.zip .
 
@@ -40,7 +40,7 @@ jobs:
 
       # ✅ Upload artifact for Azure DevOps Release Pipeline
       - name: Upload artifact for Azure DevOps
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4   # Updated to v4
         with:
           name: flask-app
           path: app.zip
