--- a/UserService/manifests/userservice.yaml
+++ b/UserService/manifests/userservice.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: userservice
-        image: <your-acr-name>.azurecr.io/userservice:latest
+        image: containeraks.azurecr.io/userservice:latest
         ports:
         - containerPort: 80
 ---
