--- a/OrderService/manifests/orderservice.yaml
+++ b/OrderService/manifests/orderservice.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: orderservice
-        image: <your-acr-name>.azurecr.io/orderservice:latest
+        image: containeraks.azurecr.io/orderservice:latest
         ports:
         - containerPort: 80
 ---
